# agora

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: .env.example  api.py  debate_system.py  pyproject.toml
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: smoke_models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: models.js  presets.js
