[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Agentic Debate UI"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "openai",
    "anthropic",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "uvicorn",
]

[tool.setuptools]
py-modules = ["api", "debate_system"]
